# mini-claude-code

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  agent.py  agent_openai.py  fly.toml  fly_server.py  keys.py  main.py  pyproject.toml  requirements-ledger.txt  requirements.txt  runtime.py  server.py  tools.py  vercel.json
api/: index.py
demo-glass/: .env.example  README.md  index.html  package-lock.json  package.json
demo-glass/src/: App.tsx  index.css
demo-glass/src/components/: AppleStyleCarousel.tsx  ChatPanel.tsx  ClaudeChatInput.tsx  GlassSurface.tsx  LargePromptPlan.tsx  MeshBackdrop.tsx  MiniCodeChat.tsx  chatComposerTypes.ts  largePromptPlanData.ts
examples/: proof_ledger_append.py
ledger/: __init__.py  delta_append.py  records.py
tests/: __init__.py  test_agent_anthropic.py  test_agent_openai.py  test_api_index.py  test_fly_server.py  test_keys.py  test_ledger.py  test_server.py  test_tools.py
web/: index.html
